处理类型执行方式改造，采用反射，不再使用swich/case